--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
         </div>
         <div class="mainimage">
-            <a class="link" href="index.html">
+            <a class="link" href="./index.html">
                 <img class="logo" src="images/worldwidelogo.jpg"> 
             </a>
         </div>
