--- a/equalpay.html
+++ b/equalpay.html
@@ -26,7 +26,7 @@
                     <a class="link" href="donate.html">Donate</a>
                 </div>
                 <div class="contact">
-                    <a class="link" href="contact.html">Contact</a>
+                    <a class="link" href="index.html#join">Contact</a>
                 </div>
             </div>
             <div class="mainimage">
