--- a/equalpay.html
+++ b/equalpay.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1500;height=1500; user-scalable=0;" />
     <link rel="stylesheet" href="blogs.css">
     <title>Worldwide Alerts</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,13 +17,13 @@
             </h1>
             <div class="subsection">
                 <div class="blogs">
-                    <a class="link" href="blogs.html">Blogs</a>
+                    <a class="link" href="blogs.html">Blogs|</a>
                 </div>
                 <div class="our-mission">
-                    <a class="link" href="index.html#mission">Mission</a>
+                    <a class="link" href="index.html#mission">Mission|</a>
                 </div>
                 <div class="donate">
-                    <a class="link" href="donate.html">Donate</a>
+                    <a class="link" href="donate.html">Donate|</a>
                 </div>
                 <div class="contact">
                     <a class="link" href="index.html#join">Contact</a>
@@ -62,7 +62,7 @@
         <div id="equalpay-blog">
             <div class="equalpay-title">
                 <h1>Equal Pay For Women</h1>
-                <img class="equalpay" src="images/equalpay.jpg" width="850" height="400">
+                <img class="equalpay" src="images/equalpay.jpg" width="1200" height="600">
             </div>
             <div class="equalpay-info">
                 <div class="intro">
@@ -81,32 +81,33 @@
                         in income between women and men in the same occupation. The gender wage gap exists 
                         around the world, far worse than what we have seen from just professional basketball. </p>
                         <br>
-                        <img class="equalballpay" src="images/equalballpay.webp" width="350" height="300">
-                        <img class="equalballpay2" src="images/equalballpay2.jpg" width="300" height="300">
+                        <img class="equalballpay" src="images/equalballpay.webp" width="850" height="800">
+                        <img class="equalballpay2" src="images/equalballpay2.jpg" width="850" height="800">
                 </div>
                 <br>
                 <div class="statistics">
                     <h1>Statistics</h1>
-                    <p>	The wage gap is extremely severe in Eastern countries. For example, “women in Pakistan<br> 
+                    <p>	The wage gap is extremely severe in Eastern countries. For example, “women in Pakistan 
                         earn 34% less than men on average. The same report also found women in Pakistan 
-                        constitute 90% of <br>the bottom 1% of wage earners in the country” (Chaudhry). The trend 
-                        seems to be that in countries where<br>church and state are not separated, the wage gap 
-                        increases. Women have gone far too long without equal pay. <br>This is an issue that can't
+                        constitute 90% of the bottom 1% of wage earners in the country” (Chaudhry). The trend 
+                        seems to be that in countries where church and state are not separated, the wage gap 
+                        increases. Women have gone far too long without equal pay. This is an issue that can't
                         be postponed. We need to take action against equal pay now! </p>
-                    <img class="wagegap" src="images/wagegap.jpg" width="500" height="250">
+                    <img class="wagegap" src="images/wagegap.jpg" width="1400" height="700">
                 </div>
+                <br>
                 <div class="equality">
                     <h1>The Fight For Equality</h1>
                     <p>
-                        In fact, there are examples of powerful women fighting for their economic equality.<br> 
+                        In fact, there are examples of powerful women fighting for their economic equality. 
                         For instance, “Patricia Arquette's Oscar speech this year, in which she referenced pay 
-                        inequalities,<br> resulted in 320,000 tweets about #equalpay in two hours” (Ford). Social media
-                        and the internet are<br> one of the leading factors in lifting women's voices and diminishing 
-                        the wage gap that exists today. <br>Parity among male and female wages is something that 
+                        inequalities, resulted in 320,000 tweets about #equalpay in two hours” (Ford). Social media
+                        and the internet are one of the leading factors in lifting women's voices and diminishing 
+                        the wage gap that exists today. Parity among male and female wages is something that 
                         we hope to see soon. 
                     </p>
-                    <img class="equalpaynow" src="images/equalpaynow.png" width="500" height="250">
-                    <img class="womanscale" src="images/womanscale.png" width="300" height="300">
+                    <img class="equalpaynow" src="images/equalpaynow.png" width="1400" height="700">
+                    <img class="womanscale" src="images/womanscale.png" width="800" height="800">
                     <br>
                     <hr>
                     <h2>Society must fight now, rest later.</h2>
@@ -114,10 +115,10 @@
             </div>
             <div class="credits">
                 <h2>
-                    Writer: Chirag Handa
+                    Writer: Alfred Siby Cyriac
                     <br>
                     <br>
-                    Editor: Alfred Siby Cyriac
+                    Editor: Chirag Handa
                     <br>
                     <br>
                     Publisher: WWA Incorporation 
@@ -136,12 +137,12 @@
         <div class="footer-contact">
             <div class="footer-contact-gmail">
                 <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSDbFTHpvTbCBZHXmrBkhRsmNTTvcJbSDdTHtlBqrGhZzKKLxcwVcQPhxLcBfnNKHKfwRlbb" target="_blank">
-                    <img src="images/gmail.png" width="33" height="28"> 
+                    <img src="images/gmail.png" width="63" height="58"> 
                 </a>
             </div>
             <div class="footer-contact-insta">
                 <a href="https://www.instagram.com/worldwidealerts/?hl=en" target="_blank">
-                    <img src="images/instagram.png" width="35" height="35">
+                    <img src="images/instagram.png" width="65" height="65">
             </div>
             <div class="footer-contact-text">
                 <div class="footer-contact-insta-text">
