--- a/blogs.html
+++ b/blogs.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1500;height:1500;user-scalable=0;" />
     <link rel="stylesheet" href="blogs.css">
     <title>Worldwide Alerts</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,13 +17,13 @@
             </h1>
             <div class="subsection">
                 <div class="blogs">
-                    <a class="link" href="blogs.html">Blogs</a>
+                    <a class="link" href="blogs.html">Blogs|</a>
                 </div>
                 <div class="our-mission">
-                    <a class="link" href="index.html#mission">Mission</a>
+                    <a class="link" href="index.html#mission">Mission|</a>
                 </div>
                 <div class="donate">
-                    <a class="link" href="donate.html">Donate</a>
+                    <a class="link" href="donate.html">Donate|</a>
                 </div>
                 <div class="contact">
                     <a class="link" href="index.html#join">Contact</a>
@@ -54,9 +54,9 @@
         </div>
         
         <div class="nav-links">
-          <a href="monkeypox.html">Monkeypox</a>
-          <a href="muslims.html">Uyghur Muslims In Concentration Camps</a>
-          <a href="equalpay.html">Equal Pay</a>
+          <a href="monkeypox.html">Monkeypox |</a>
+          <a href="muslims.html">Uyghur Muslims In Concentration Camps </a>
+          <a href="equalpay.html">| Equal Pay</a>
         </div>
       </div>
       <div id="monkeypox-blog">
@@ -64,7 +64,7 @@
             <h1>
                Monkeypox Detox Oversimplified 
             </h1>
-            <img class="monkeypox" src="images/monkeypox.jpg"width="850" height="400">
+            <img class="monkeypox" src="images/monkeypox.jpg"width="1200" height="600">
         </div>
         <div class="monkeypox-info">
             <div class="intro">
@@ -97,26 +97,27 @@
             </div>  
             <div class="symptoms">
                 <h1>Symptoms</h1>
-                <p>Symptoms for the monkeypox virus are not noticeable until 1 to 3 weeks after exposure.<br> 
+                <p>Symptoms for the monkeypox virus are not noticeable until 1 to 3 weeks after exposure. 
                     Like stated in the previous paragraph the only way of getting this virus is through 
-                    intimate/close contact<br>with any person or animal that is infected with the virus. 
-                    Intimate contact with another individual includes:<br> sexual orientation, hugging, massaging,
-                    kissing, and sharing of any bodily fuid. Also, it is suggested you take<br>precautions when 
-                    touching the objects used by a person who has the virus as they must be disinfected or<br> 
+                    intimate/close contact with any person or animal that is infected with the virus. 
+                    Intimate contact with another individual includes: sexual orientation, hugging, massaging,
+                    kissing, and sharing of any bodily fuid. Also, it is suggested you take precautions when 
+                    touching the objects used by a person who has the virus as they must be disinfected or 
                     those objects also have a chance of spreading the virus. There are different levels to 
-                    the symptoms.<br>Starting off with level 1 is the flu like symptoms which are fevers, 
-                    headaches, and fatigue which could easily<br>be the cause of some other factor. Level 2 
-                    includes chills and swollen lymph nodes; these should alert you<br>but are not enough to 
-                    fully confirm it is monkeypox. Last but not least, level 3 is rashes that turn into bumps<br>
+                    the symptoms. Starting off with level 1 is the flu like symptoms which are fevers, 
+                    headaches, and fatigue which could easily be the cause of some other factor. Level 2 
+                    includes chills and swollen lymph nodes; these should alert you but are not enough to 
+                    fully confirm it is monkeypox. Last but not least, level 3 is rashes that turn into bumps
                     located on various parts of the body such as feet, hands, chest, face, mouth, and 
-                    genitals. These rashes also<br>include scabs. If an individual has these symptoms they 
-                    should get tested by a healthcare professional.<br>The test can either be a blood test or 
-                    microscopic inspection of bodily fluid.  These symptoms typically last<br>2 to 4 weeks. 
+                    genitals. These rashes also include scabs. If an individual has these symptoms they 
+                    should get tested by a healthcare professional. The test can either be a blood test or 
+                    microscopic inspection of bodily fluid. These symptoms typically last 2 to 4 weeks. 
                     In this time span the rash will be fully healed and the damaged skin will be replaced by 
-                    a new<br>layer of skin that forms in response to the damage.  
+                    a new layer of skin that forms in response to the damage.  
                 </p>
-                <img class="monkeysymptoms" src="images/monkeysymptoms.jpg" width="500" height="250">
+                <img class="monkeysymptoms" src="images/monkeysymptoms.jpg" width="1400" height="700">
             </div>
+            <br>
             <div class="treatments">
                 <h1>Treatments</h1>
                 <p>
@@ -133,12 +134,12 @@
                     directly made for the monkeypox virus. It is important those with the virus isolate 
                     themselves from others and maintain proper hygiene to help the healing process. 
                 </p>
-                <img class="monkeytreatments" src="images/monkeytreatments.jpg" width="500" height="250">
-                <img class="monkeytreatments2" src="images/monkeytreatments2.jpg" width="500" height="250">
+                <img class="monkeytreatments" src="images/monkeytreatments.jpg" width="700" height="450">
+                <img class="monkeytreatments2" src="images/monkeytreatments2.jpg" width="650" height="450">
             </div>
             <div class="credits">
                 <h2>
-                    Writer: Alfred Siby Cyriac
+                    Writer: Chirag Handa
                     <br>
                     <br>
                     Editor: Dilver Singh
@@ -149,9 +150,8 @@
                     <br>
                     <div class="work-cited">
                         Worked Cited:
-                        <i>“Monkeypox.” Centers for Disease Control and Prevention, Centers for Disease Control and Prevention, 29 July 2022, <a href="https://www.cdc.gov/poxvirus/monkeypox/index.html.">https://www.cdc.gov/poxvirus/monkeypox/index.html.</a></i> 
-                        <br>
-                        <i>“Monkeypox.” World Health Organization, World Health Organization, 19 May 2022, <a href="https://www.who.int/news-room/fact-sheets/detail/monkeypox.">https://www.who.int/news-room/fact-sheets/detail/monkeypox.</a></i>
+                        <h3><i>“Monkeypox.” Centers for Disease Control and Prevention, Centers for Disease Control and Prevention, 29 July 2022, <a href="https://www.cdc.gov/poxvirus/monkeypox/index.html.">https://www.cdc.gov/poxvirus/monkeypox/index.html.</a></i></h3>
+                        <h3><i>“Monkeypox.” World Health Organization, World Health Organization, 19 May 2022, <a href="https://www.who.int/news-room/fact-sheets/detail/monkeypox.">https://www.who.int/news-room/fact-sheets/detail/monkeypox.</a></i></h3>
                     </div>
                 </h2>
             </div>
@@ -169,12 +169,12 @@
         <div class="footer-contact">
             <div class="footer-contact-gmail">
                 <a href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSDbFTHpvTbCBZHXmrBkhRsmNTTvcJbSDdTHtlBqrGhZzKKLxcwVcQPhxLcBfnNKHKfwRlbb" target="_blank">
-                    <img src="images/gmail.png" width="33" height="28"> 
+                    <img src="images/gmail.png" width="63" height="58"> 
                 </a>
             </div>
             <div class="footer-contact-insta">
                 <a href="https://www.instagram.com/worldwidealerts/?hl=en" target="_blank">
-                    <img src="images/instagram.png" width="35" height="35">
+                    <img src="images/instagram.png" width="65" height="65">
             </div>
             <div class="footer-contact-text">
                 <div class="footer-contact-insta-text">
@@ -188,3 +188,7 @@
         </div>
     </footer>      
 </body>
+
+
+
+
